--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,5 +1,7 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text');
+
 
 .clear {
   clear: both;
@@ -40,6 +42,7 @@
 
 .links a {
   color: black;
+  font-family: 'england_hand_dbregular', serif;
   font-size: 25px;
   border-bottom: 1px solid #dfdfdf;
 }
@@ -50,4 +53,13 @@ header {
 
 hr {
   clear: both;
+}
+
+h1 {
+  font-family: 'Crimson Text', serif;
+
+}
+
+h2 {
+  font-family: 'Crimson Text', serif;
 }
