--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -63,3 +63,18 @@ h1 {
 h2 {
   font-family: 'Crimson Text', serif;
 }
+
+.next-quote {
+  color: #f84342;
+  fontfamily: 'nobilemedium_italic', sans-serif;
+  font-size: 20px;
+}
+
+.footer-blurb {
+   font-family:  Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", 
+                Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", 
+                Georgia, serif;
+   font-style: italic;
+   text-align: right;
+   font-size: 10px;
+}
