--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,18 @@
       <%= yield %>
     </div>
 
-
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <%= link_to "This isn't enough, I need more", "#", class: 'next-quote' %>
+          </div>
+          <div class="col-6 footer-blurb">
+            Proudly hacked in Burlington, WA by <a href="http:thefirehoseproject.com">Brian Wilson</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
