--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,13 @@
           </div>
         <% end %>
       </div>
-      <div class="col-4 slogan">
+      <div class="col col-4 hidden-xs-down slogan">
         Splurting out unsolicited advice about entrepreneurship since 2016
       </div>
       <div class="col-5 links">
         <!-- Button trigger modal -->
         <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>
+        &nbsp; &nbsp;
         <%= link_to 'About', about_path %>
       </div>
     </header>
@@ -47,9 +48,11 @@
           </div>
           <div class="modal-body">
             <%= simple_form_for Quote.new do |f| %>
-              <%= f.input :tagline, label: 'Tagline: A two to three word summary beginning with the word "on".' %>
-              <%= f.input :saying %>
-              <%= f.input :author %>
+              <%= f.input :tagline, label: 'Tagline: A two to three word summary beginning with the word "on".', placeholder: "on the benefits of smiling" %>
+              <br />
+              <%= f.input :saying, label: "What is the saying you want to add?", placeholder: "We shall never know all the good that a simple smile can do." %>
+              <br />
+              <%= f.input :author, label: "Who is the author of the quote?", placeholder: "Mother Teresa" %>
               <br />
           </div>
           <div class="modal-footer">
@@ -77,10 +80,10 @@
     <div class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
             <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
           </div>
-          <div class="col-6 footer-blurb">
+          <div class="col-12 col-sm-6 footer-blurb">
             Proudly hacked in Burlington, WA by <a href="http:thefirehoseproject.com">Brian Wilson</a>
           </div>
         </div>
