--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,3 +1,12 @@
-<h2><%= @quote.tagline %></h2>
+<h2 class="spurty-number">
+  <span> SPLURTY / NO. <%= @quote.id %></span>
+</h2>
+
+<h2 class="tagline"><%= @quote.tagline %></h2>
 <h1><%= @quote.saying %></h1>
-<h2><%= @quote.author %></h2>
+<h2 class="float-right"><%= @quote.author %></h2>
+
+<br class="clear" />
+<br />
+<br />
+<br />
